# smarttub-mqtt

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_FROZEN.md  CONTRIBUTING.md  DOCKER.md  DOCKER_HUB_PUBLISH.sh  Dockerfile  LICENSE  PUBLISH.md  README.md  README_EN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.3.0.md  UPGRADE_NOTES.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup-docker.sh
.github/: BADGES.md  SECURITY.md  copilot-instructions.md  pre-commit.sh
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: .env.example
deploy/: .env.example  .gitignore  README.md  docker-compose.example.yml
deploy/mosquitto/log/: .gitkeep
deploy/smarttub-mqtt/log/: .gitkeep
docs/: CHANGES-light-discovery.md  automation-migration.md  configuration.md  discovery-light-modes.md  discovery-progress.md  discovery.md  docker-build.md  error-tracking.md  logging.md  migration.md  monitoring.md  release-notes.md  security-review.md  testing.md  verification.md  webui.md
docs/specs/: discovery.md
docs/tasks/: discovery_tasks.md
openhab/: README.md  smarttub.items  smarttub.sitemap  smarttub.things
openhab/transform/: smarttub_heater.map  smarttub_lightmode.map  smarttub_lightstate.map  smarttub_pumpstate.map
scripts/: security-check.sh
specs/001-smarttub-mqtt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-smarttub-mqtt/checklists/: requirements.md
specs/001-smarttub-mqtt/contracts/: mqtt-topics.md  openapi.yaml
specs/002-background-discovery/: TASK_PLAN.md
src/: __init__.py
src/cli/: run.py
src/core/: __init__.py  background_discovery.py  capability_detector.py  config_loader.py  discovery_coordinator.py  discovery_progress.py  discovery_state.py  error_tracker.py  item_prober.py  log_rotation.py  smarttub_client.py  state_manager.py  version.py  yaml_fallback.py
src/docker/: __init__.py  entrypoint.py
src/mqtt/: __init__.py  broker_client.py  command_manager.py  discovery_handler.py  log_bridge.py  topic_mapper.py
src/web/: app.py  auth.py
src/web/templates/: controls.html  discovery.html  overview.html
tests/: LIGHT_TESTS_README.md  conftest.py  discoverd_items.yaml  discovered_items.generated.yaml  discovered_items.old.yaml  run_both_zones.py  run_light_test.sh  run_test_zones.sh  spa_raw_data.generated.yaml  validate_background_discovery.py  validate_discovery_coordinator.py  validate_discovery_coordinator_simple.py  validate_discovery_mqtt.py  validate_discovery_state.py  validate_discovery_webui.py  validate_startup_integration.py
tests/integration/legacy/: README.md
tests/manual/: README.md  test_background_discovery_v0.3.0.sh
tests/results/: .gitkeep  light_mode_test_zone1_20251103_073439.json  light_mode_test_zone1_20251109_095739.json  light_mode_test_zone1_20251109_115711.json  light_mode_test_zone1_20251109_120636.json  zone1_quick_1762549015.json  zone1_quick_1762549137.json  zone1_quick_1762549220.json  zone2_quick_1762549048.json  zone2_quick_1762549170.json  zone2_quick_1762549267.json
tests/unit/fixtures/: valid_config.yaml
tools/: migrate.py
